--- a/index.html
+++ b/index.html
@@ -13,36 +13,31 @@
 
 <body>
 
-    <!--Menu Responsive-->
     <header>
         <nav class="menu">
-            <ul>
+            <ul class="menu-links">
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Say Hello</a></li>
                 <li><a href="#">About</a></li>
+            </ul>
+            <ul class="social-icons">
                 <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
                             class="fab fa-linkedin"></i></a></li>
                 <li><a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a></li>
                 <!-- Agrega más íconos según tus necesidades -->
             </ul>
+            <div class="menu-toggle">
+                <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </header>
-    <!-- Resto del contenido -->
+
+
+
+
 
     <!--Profile
-    <div class="container">
-        <h1>Kevin E. Cruz</h1>
-        <p>Desarrollador Web Junior</p>
-        <img src="" />
-    </div>
-
-    <!--Sobre Mi
-    <section id="about">
-        <div class="container">
-            <h2>Acerca de Mí</h2>
-            <div class="about-content">
-                <img src="tu_foto.jpg" alt="Tu Foto">
-                <p>¡Hola! Soy [Tu Nombre], un desarrollador junior apasionado por la creación de soluciones
+<p>¡Hola! Soy [Tu Nombre], un desarrollador junior apasionado por la creación de soluciones
                     tecnológicas. Mi viaje en el mundo del desarrollo web comenzó con [breve historia sobre tu interés
                     en la programación].</p>
                 <p>Me encanta aprender nuevas tecnologías y enfrentar desafíos. Tengo experiencia con [menciona las
@@ -54,49 +49,16 @@
                     éxito de equipos de desarrollo.</p>
             </div>
         </div>
-    </section>
-
-    <!--Projects
-    <section id="projects">
-        <div class="container">
-            <h2>Proyectos Destacados</h2>
-            <!-- Aquí puedes agregar tus proyectos 
-    <div class="project">
-        <img src="https://via.placeholder.com/300x200" alt="Proyecto 1">
-        <h3>Proyecto 1</h3>
-        <p>Descripción del proyecto 1.</p>
-        <a href="#">Ver Proyecto</a>
-    </div>
-    <div class="project">
-        <img src="https://via.placeholder.com/300x200" alt="Proyecto 2">
-        <h3>Proyecto 2</h3>
-        <p>Descripción del proyecto 2.</p>
-        <a href="#">Ver Proyecto</a>
-    </div>
-    <div class="project">
-        <img src="https://via.placeholder.com/300x200" alt="Proyecto 3">
-        <h3>Proyecto 3</h3>
-        <p>Descripción del proyecto 3.</p>
-        <a href="#">Ver Proyecto</a>
-    </div>
-    </div>
-    </section>
-
-    <!--Contact--
-    <section id="contact">
-        <div class="container">
-            <h2>Contacto</h2>
-            <p>Puedes contactarme en: tú@email.com</p>
-        </div>
-    </section><!-->
+    </section!-->
 
 
-    <footer>
+    <!--<footer>
         <div class="container">
             <p>&copy; 2023 My Company. All rights reserved.</p>
         </div>
     </footer>
     <script src="../Portfolio/JS/main.js"></script>
+-->
 
 </body>
 
