--- a/index.html
+++ b/index.html
@@ -16,50 +16,26 @@
     <header>
         <nav class="menu">
             <ul class="menu-links">
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Say Hello</a></li>
+                <li><a href="#"">Home</a></li>
                 <li><a href="#">About</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Portfolio</a></li>
             </ul>
             <ul class="social-icons">
                 <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
-                            class="fab fa-linkedin"></i></a></li>
-                <li><a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a></li>
-                <!-- Agrega más íconos según tus necesidades -->
+                            class="fab fa-linkedin" alt="linkedin" ></i></a></li>
+                <li><a href="https://github.com/kecc00" target="_blank" class="social-icon"><i class="fab fa-github" alt="github" ></i></a></li>
             </ul>
-            <div class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </div>
         </nav>
     </header>
 
 
+<footer>
+    <div class="container">
+        <p>&copy; 2023 My Company. All rights reserved.</p>
+    </div>
+</footer>
 
-
-
-    <!--Profile
-<p>¡Hola! Soy [Tu Nombre], un desarrollador junior apasionado por la creación de soluciones
-                    tecnológicas. Mi viaje en el mundo del desarrollo web comenzó con [breve historia sobre tu interés
-                    en la programación].</p>
-                <p>Me encanta aprender nuevas tecnologías y enfrentar desafíos. Tengo experiencia con [menciona las
-                    tecnologías, lenguajes o frameworks con los que estás familiarizado] y mi objetivo es seguir
-                    creciendo profesionalmente.</p>
-                <p>En mis proyectos, me enfoco en [tu enfoque principal, como diseño UX/UI, desarrollo front-end,
-                    back-end, etc.] y siempre busco mejorar mis habilidades.</p>
-                <p>Estoy emocionado por la oportunidad de crecer, colaborar en proyectos desafiantes y contribuir al
-                    éxito de equipos de desarrollo.</p>
-            </div>
-        </div>
-    </section!-->
-
-
-    <!--<footer>
-        <div class="container">
-            <p>&copy; 2023 My Company. All rights reserved.</p>
-        </div>
-    </footer>
-    <script src="../Portfolio/JS/main.js"></script>
--->
-
+<script src="../Portfolio/JS/main.js"></script>
 </body>
-
 </html>
