--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@
 
 <body>
 
-    <header>
-        <nav class="menu">
-            <ul class="menu-links">
-                <li><a href="#"">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Portfolio</a></li>
-            </ul>
-            <ul class="social-icons">
-                <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
+<!--Menu-->
+<header>
+    <nav class="menu">
+        <ul class="menu-links">
+            <li><a href="#"">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Resume</a></li>
+            <li><a href="#">Portfolio</a></li>
+        </ul>
+        <ul class="social-icons">
+            <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
                             class="fab fa-linkedin" alt="linkedin" ></i></a></li>
-                <li><a href="https://github.com/kecc00" target="_blank" class="social-icon"><i class="fab fa-github" alt="github" ></i></a></li>
-            </ul>
-        </nav>
-    </header>
+            <li><a href="https://github.com/kecc00" target="_blank" class="social-icon"><i class="fab fa-github" alt="github" ></i></a></li>
+        </ul>
+    </nav>
+</header>
+
+<!--Perfil-->
 
 
 <footer>
