--- a/index.html
+++ b/index.html
@@ -13,32 +13,42 @@
 
 <body>
 
-<!--Menu-->
-<header>
-    <nav class="menu">
-        <ul class="menu-links">
-            <li><a href="#"">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Resume</a></li>
-            <li><a href="#">Portfolio</a></li>
-        </ul>
-        <ul class="social-icons">
-            <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
-                            class="fab fa-linkedin" alt="linkedin" ></i></a></li>
-            <li><a href="https://github.com/kecc00" target="_blank" class="social-icon"><i class="fab fa-github" alt="github" ></i></a></li>
-        </ul>
-    </nav>
-</header>
+    <!--Menu-->
+    <header>
+        <nav class="menu">
+            <ul class="menu-links">
+                <li><a href="#"">Home</a></li>
+            <li><a href=" #">About</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Portfolio</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<!--Perfil-->
-
-
-<footer>
-    <div class="container">
-        <p>&copy; 2023 My Company. All rights reserved.</p>
+    <!--Perfil-->
+    <div class="container-profile">
+        <h3 class="title-profile">Kevin</h3>
+        <h1 class="title-profile">E. Cruz</h1>
+        <p class="title-profile">Desarrollador Front End JR</p>
+        <div class="buttons">
+            <button class="rounded-btn">Resume</button>
+            <button class="rounded-btn">Portfolio</button>
+            <ul class="social-icons">
+                <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
+                            class="fab fa-linkedin" alt="linkedin"></i></a></li>
+                <li><a href="https://github.com/kecc00" target="_blank" class="social-icon"><i class="fab fa-github"
+                            alt="github"></i></a></li>
+            </ul>
+        </div>
     </div>
-</footer>
 
-<script src="../Portfolio/JS/main.js"></script>
+    <footer>
+        <div class="container-footer">
+            <p>&copy; 2023 My Company. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="../Portfolio/JS/main.js"></script>
 </body>
+
 </html>
