--- a/index.html
+++ b/index.html
@@ -17,36 +17,101 @@
     <header>
         <nav class="menu">
             <ul class="menu-links">
-                <li><a href="#"">Home</a></li>
-            <li><a href=" #">About</a></li>
-                <li><a href="#">Resume</a></li>
-                <li><a href="#">Portfolio</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact Me</a></li>
             </ul>
         </nav>
     </header>
 
-    <!--Perfil-->
-    <div class="container-profile">
-        <h3 class="title-profile">Kevin</h3>
-        <h1 class="title-profile">E. Cruz</h1>
-        <p class="title-profile">Desarrollador Front End JR</p>
-        <div class="buttons">
-            <button class="rounded-btn">Resume</button>
-            <button class="rounded-btn">Portfolio</button>
-            <ul class="social-icons">
-                <li><a href="https://www.linkedin.com/in/dearcruz/" target="_blank" class="social-icon"><i
-                            class="fab fa-linkedin" alt="linkedin"></i></a></li>
-                <li><a href="https://github.com/kecc00" target="_blank" class="social-icon"><i class="fab fa-github"
-                            alt="github"></i></a></li>
-            </ul>
-        </div>
-    </div>
 
-    <footer>
-        <div class="container-footer">
-            <p>&copy; 2023 My Company. All rights reserved.</p>
+    <!--Contenido Principal-->
+    <main class="container-profile">
+        <h1 id="Home">Kevin Cruz</h1>
+        <p>Frontend Developer, with knowledge in web development and desing, i offer the best projects resulting in
+            quality work.</p>
+        <!--Iconos-->
+        <a href="" target="_blank">
+            <i class="fab fa-instagram"></i></a>
+        <a href="" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="" target="_blank">
+            <i class="fab fa-linkedin"></i>
+        </a>
+    </main>
+
+
+    <!--Informacioón de mi-->
+    <aside>
+        <h2 id="about">About Me.</h2>
+        <p>Passionate about creating <strong>Web Pages</strong> with <strong>UI/UX User Interface</strong>, I have years
+            of experience many clients are happy with the projects carried out.
+        </p>
+        <ul>
+            <li><Strong>My Skills Are:</Strong> HTML, CSS, JavaScript, React, Git & GitHub, Bootstrap, Flutter & Figma.
+            </li>
+        </ul>
+        <button>Contact Me</button>
+        <!--Icono de guardar cv-->
+    </aside>
+
+    <section>
+        <h2>Services</h2>
+        <div>
+            <article>
+                <h3>Web Design</h3>
+                <p>Beautiful and elegant designs with interfaces that are intuitive, efficient, and pleasant to use for
+                    the user.</p>
+            </article>
         </div>
-    </footer>
+    </section>
+
+    <section>
+        <div>
+            <article>
+                <h3>Development</h3>
+                <p>Custom web development tailored to your specifications, designed to provide a flawless user
+                    experience.</p>
+            </article>
+        </div>
+    </section>
+
+    <!--Proyectos-->
+    <h2 id="projects">Projects.</h2>
+
+    <h3>Firts Project</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam commodi saepe nulla perferendis
+        necessitatibus quisquam iusto nisi, harum sequi suscipit est, atque quas autem sunt, omnis neque. Laboriosam,
+        autem.</p>
+    <!--que tenga un icono que rediriga al proyecto en gitgub, el icono debe llevar el texto ver-->
+
+    <h3>Firts Project</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam commodi saepe nulla perferendis
+        necessitatibus quisquam iusto nisi, harum sequi suscipit est, atque quas autem sunt, omnis neque. Laboriosam,
+        autem.</p>
+
+    <h3>Firts Project</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam commodi saepe nulla perferendis
+        necessitatibus quisquam iusto nisi, harum sequi suscipit est, atque quas autem sunt, omnis neque. Laboriosam,
+        autem.</p>
+
+    <h3>Firts Project</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam commodi saepe nulla perferendis
+        necessitatibus quisquam iusto nisi, harum sequi suscipit est, atque quas autem sunt, omnis neque. Laboriosam,
+        autem.</p>
+
+    <h3>Firts Project</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui laboriosam commodi saepe nulla perferendis
+        necessitatibus quisquam iusto nisi, harum sequi suscipit est, atque quas autem sunt, omnis neque. Laboriosam,
+        autem.</p>
+
+
+    <!--Formulario y informacion de contacto-->
+
+
+
 
     <script src="../Portfolio/JS/main.js"></script>
 </body>
